--- a/src/main/resources/templates/plan/calendar.html
+++ b/src/main/resources/templates/plan/calendar.html
@@ -199,7 +199,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" action="/planner/add">
+                <form method="post" action="/planner/city">
 
 
                     <input id="plannerName2" name="plannerName" type="text" class="form-control" placeholder="여행 제목을 입력해주세요.">
@@ -304,7 +304,7 @@
         <div class="pt-5 pb-5">
 
             <h2 class="display-6 text-center pb-5">여행 기간을 입력해주세요.</h2>
-            <form method="post" action="/planner/add">
+            <form method="post" action="/planner/city">
 
 
                 <input id="plannerName" name="plannerName" type="text" class="form-control" placeholder="여행 제목을 입력해주세요.">
